src/home/home.scss
.homePage {
    h1 {
        font-family: 'Source Serif Pro', serif;
    }

    p {
        font-family: 'Lato';
        font-style: normal;
        font-weight: normal;
        font-size: 24px;
        line-height: 173.68%;
        letter-spacing: -0.005em;
        color: #212121;
    }

    .splash {
        margin: 0 auto;
        padding: 100px 0;
        position: relative;

        .left {
           
            p {
                font-size: 22px;
                line-height: 150%;    
            }
        }

        .right {
            overflow: hidden;
            display: block;

            .bigBlob {
                position: absolute;
                z-index: -1000;
                height: 500px;
                right: 0px;
                top: 100px;
            }

            .miniBlob {
                position: absolute;
                z-index: -1000;
                right: 700px;
                top: 400px;
            }

            .group {
                position: absolute;
                width: 382.87px;
                height: 382.49px;
                left: 825px;
                top: 50px;
            }

            .googie {
                position: absolute;
                width: 355.89px;
                height: 355.54px;
                left: 1050px;
                top: 290px;
            }
        }

        a {
            text-decoration: none;
        }
    }

    .inspired {
        background-color: var(--light-color);
        position: relative;
        display: block;

        h1, p {
            margin-bottom: 15px;
        }

        a {
            margin-top: 10px;
        }

        .blobs {
            .rope {
                position: absolute;
                top: -200px;
                left: 0px;
                stroke: var(--dark-color);
            }

            .bottomLeft {
                top: 250px;
                left: 130px;
                position: absolute;
                z-index: 2;
            }

            .topRight {
                top: -70px;
                left: 460px;
                position: absolute;
                z-index: 3;
            }

            .exec {
                top: 170px;
                width: 310px;
                left: 240px;
                position: absolute;
                z-index: 1;
                filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
            }

            .railroad {
                top: 0px;
                left: 130px;
                width: 400px;
                position: absolute;
                z-index: 0;
            }
        }

        .clear {
            clear: both;
        }
    }

    .spectrums {
        text-align: center;
        padding: 60px 0;

        .spectrumText {
            h1 {
                margin: 20px;
            }
        }

        .button {
            margin-left: 10px;
            margin-right: 10px;
            display: inline-block;
            vertical-align: middle;

        }

        .mobileRow {
            display: block;

            img {
                width: 25px;
                margin: 10px;
            }
        }

        .projectDomain {
            display: inline-block;
            vertical-align: middle;
            border: 1px solid rgba(214,214,214,0.5);
            padding: 15px 20px;
            border-radius: 100px;
            box-sizing: border-box;
            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.10);
            overflow: visible;
            margin: 10px 10px;
            cursor: default;

            img {
                height: 25px;
                display: inline-block;
                margin-right:15px;
                vertical-align: middle;
            }

            p {
                font-size: 15px;
                display: inline-block;
                font-weight: bold;
                position: relative;
                margin: 0;
                vertical-align: middle;
            }
        }
    }

    .partners {
        text-align:center;
        background-color: var(--light-color); // $light-blue;

        .container {
            padding: 50px 0 100px 0;
            max-width: 1300px;

            h1 {
                margin-top: 0;
            }

            img {
                display: inline-block;
                vertical-align: middle;
            }
        }
    }

    .wave {
        z-index: -1000;
    }
}

@media (min-width: 1100px) {
    .homePage {
        h1 {
            font-size: 3rem;
            line-height: 113.18%;
        }

        .splash {
            h1 {
                margin: 20px 0;
            }
            .container {
                display: grid;
                grid-template-columns: 2fr 2fr;
                grid-column-gap: 40px;
            }

            .right {
                text-align: right;
                margin-bottom: 100px;
                z-index: 1001;
            }
        }

        .inspired {
            .container {
                display: grid;
                grid-template-columns: 2fr 2fr;
            }

            .right {
                text-align: right;
                display: block;
                margin-bottom: 100px;
            }
        }

        .spectrums {
            .container p {
                padding: 0 100px 0px 100px;
            }
        }

        .partners {
            .container {
                h1 {
                    margin-bottom: 1em;
                }

                img {
                    padding-left: 1%;
                    padding-right: 1%;
                    width: 13%;
                }
            }
        }

        .who {
            .grid.container {
                display: grid;
                grid-template-columns: 1fr 1fr;
                grid-column-gap: 30px;
                padding-top: 100px;
                text-align: right;
                img {
                    width: 110%;
                    z-index: -1000;
                    // text-align: center;
                }
            }
        }
        .topsvg {
            margin-top: -180px;
        }
    }
}

// ~ MOBILE ~

@media (max-width: 1100px) {
    .homePage {
        .splash {
            padding: 30px 0;
            text-align: center;

            .bigBlob, .miniBlob, .seniors {
                display: none;
            }

            .emgajen {
                width: 80%;
                margin: 0 auto;
            }
        }

        .inspired {
            padding: 20px 0;
            text-align: center;

            .showOnMobile {
                margin: 10%;
                .hillpic {
                    width: 100%;
                }
            }

        }

        .spectrums {

            .projectDomain {
                margin: 5px;
            }
            .row {
                padding: 0;
            }

            .button {
                margin-bottom: 25px;
            }
        }

        h1 {
            font-size: 30px;
            margin: 40px 0;
        }

        p {
            font-size: 20px;
        }

        .blobs {
            display: none;
        }

        .partners {
            .container {

                h1 {
                    margin-bottom: .5em;
                }

                img {
                    padding-left: 2%;
                    padding-right: 2%;
                    width: 26%;
                }
            }
        }

        .who {
            .grid.container {
                text-align: center;
                img {
                    width: 90%;
                    max-width: 500px;
                }
            }
        }
    }
    .topsvg {
      margin-top: 0px;
    }
}

